<resources>
    <string name="app_name">Heko</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Chạm để đăng nhập</string>
    <string name="nav_header_subtitle" />
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Đọc truyện</string>
    <string name="menu_gallery">Thông tin truyện</string>
    <string name="menu_slideshow">Đọc truyện</string>
    <string name="menu_logout">Đăng xuất</string>

    <string name="backbtn">Go back</string>

    <string name="error_norm">Đã có lỗi xảy ra</string>
    <string name="error_user_not_found">Không tìm thấy dữ liệu người dùng</string>

    <string name="logo_description">Heko the reading app</string>
    <string name="avatar_upload">Upload you profile photo</string>
    <string name="title_activity_login">Đăng Nhập</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Tên người dùng</string>
    <string name="prompt_password">Mật Khâu</string>
    <string name="prompt_password_con">Xác nhận Mật khẩu</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Email không hợp lệ</string>
    <string name="invalid_password">Mật khẩu phải lớn hơn 5 kí tự</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title_font">sans-serif-black</string>
    <string name="login_signup_link">Chưa có tài khoản? Đăng ký ngay̲</string>
    <string name="login_email_empty_prompt">Email Không được để trống̲</string>
    <string name="login_password_empty_prompt">Mật khẩu Không được để trống̲</string>

    <string name="signup_title">Đăng ký tài khoản</string>
    <string name="pw_not_match">xác nhận Mật khẩu không khớp</string>
    <string name="upload_failed">Upload ảnh thật bại</string>
    <string name="signup_login_link">Đã có tài khoản? Đăng nhập</string>
    <string name="signup_success">Đăng ký tài khoản thành công</string>
    <string name="signup_failed">Đăng ký tài khoản thất bại</string>
    <string name="logout_btn_prompt">Logout of current account</string>
    <string name="logout">Đăng xuất</string>
    <string name="profile_header_title">Your profile</string>

    <!--    Fragment Profile-->
    <string name="profile_username">Tên tài khoản :</string>
    <string name="user_detail">Thông tin cá nhân</string>
    <string name="profile_email">Email :</string>
    <string name="profile_btn_password">Thay đổi mật khẩu</string>
    <string name="profile_btn_update">Chỉnh sửa</string>
    <string name="profile_email_hint">Nhập email mới</string>
    <string name="profile_user_hint">Nhập tên tài khoản mới</string>
    <string name="fb_get_failed">Không thể lấy dữ liệu từ máy chủ</string>
    <string name="profile_suc_email">Email cập nhật thành công</string>
    <string name="profile_email_error">Email không hợp lệ</string>
    <string name="profile_change_email_fail">Thay đổi email không thành công</string>
    <string name="profile_email_sent">Đã gửi mail, vui lòng kiểm tra thư</string>
    <string name="profile_ok">OK</string>
    <string name="profile_cancel">Cancel</string>
    <string name="profile_confirm">Xác nhận thay đổi thông tin</string>
    <string name="profile_aleart">Thông báo!</string>
    <string name="profile_success_change_username">Thay đổi tên tài khoản thành công</string>
    <string name="profile_update_fail">Cập nhật không thành công</string>
    <string name="dialog_update">OK</string>
    <string name="dialog_cancel">Hủy</string>
    <!--    FIREBASE communication strings-->

    <string name="username_hint">Tên tài khoản mới</string>
    <string name="profile_username_null">Vui lòng không để trống tên tài khoản</string>
    <string name="profile_title_update">Cập nhật tên tài khoản</string>
    <string name="home_notice">Ra mắt Hako Facebook Group\nDonate hỗ trợ Cổng LN Không đăng Manga\n Thử nghiệm thông báo chương mới</string>
    <string name="home_banner">A banner the app</string>
    <string name="home_book_list">Danh sach truyen</string>
    <string name="cover_for_book">cover for book</string>
    <string name="book_title_placeholder">Một truyện gì đó trên Hako-to be added later</string>
    <string name="ln_cover_dec">light novel cover</string>
    <!-- IDK -->
    <string name="recycle_item_volume_placeholder">Volume 1</string>
    <string name="recycle_item_chapter">Web Novel</string>
    <string name="search_prompt">Tìm kiếm truyện 🔍</string>
    <!-- IDK -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ln_list_volume">Danh sách chương</string>
    <string name="ln_des">Nội dung</string>
    <string name="icon_arrow_down">icon arrow down</string>
    <string name="author_header">Tác giả :</string>
    <string name="follow_light_novel">Follow Light Novel</string>
    <string name="go_to_list_volume">Go to list volume</string>
    <string name="last_update">Last update</string>
    <string name="list_volume_txt">Danh sách chương</string>
    <string name="tab_info">Thông tin truyện</string>
    <string name="tab_volume">Danh sách chương</string>
    <string name="title_follow">Theo dõi truyện</string>
    <string name="title_volume">Mục lục</string>
    <string name="text_change_avatar">Thay đổi ảnh đại diện</string>
    <string name="text_change_password">Thay đổi mật khẩu</string>
    <string name="text_change_user_info">Thay đổi thông tin tài khoản</string>
    <string name="book_follow">Truyện theo dõi</string>
    <string name="error_load_book">Không thể tải truyện</string>
    <string name="fontset_title">Tùy chỉnh</string>
    <string name="fontset_size">Kích cỡ chữ</string>
    <string name="fontset_font">Phông chữ</string>

    <!--    SharedPref keys-->
    <string name="font_family_id">Font Family</string>
    <string name="text_size">Text Size</string>
    <string name="image_of_book">Image of Book</string>
    <string name="read">Đã đọc</string>
    <!--    SharedPref keys-->
    <!-- Preference Titles -->
    <string name="messages_header">Giao diện</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="theme_sel_title">Màu chủ đạo</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Bật/Tắt thông báo</string>
    <string name="attachment_summary_on">Thông báo hiện đang tắt
    </string>
    <string name="attachment_summary_off">Thông báo hiện đang tắt</string>
    <string name="theme_id">theme</string>
    <string name="menu_settings">Cài đặt ứng dụng</string>
    <string name="setting_noti">Thông báo</string>
    <string name="setting_notification">setting_notification</string>
    <string name="err_screen_text">Khong co mang rui 😭😭😭</string>
    <string name="err_screen_header">Oh, nooo!!!</string>
    <string name="err_screen_retry">thử lại</string>
    <string name="book_shelf">Tủ sách</string>
    <string name="followed_book">Truyện đang theo dõi</string>
    <!--    save last read-->
    <string name="lr_book_id">lrbookid</string>
    <string name="lr_chapter_id">lr_chapter_id</string>
    <string name="lr_volume_id">lr_volume_id</string>
    <string name="lr_d_book_title">lr_d_book_title</string>
    <string name="lr_d_book_cover">lr_d_book_cover</string>
    <string name="lr_d_chapter_title">lr_d_chapter_title</string>
    <string name="lr_d_vol_title">lr_d_vol_title</string>
    <string name="lr_postion">lr_postion</string>
    <string name="ch_ng_c_g_n_nh_t">Chương đọc gần nhất</string>
    <string name="c_ti_p">Đọc tiếp</string>
    <string name="channel_name">Thông báo truyện mới</string>
    <string name="cd_floatingbutton">change text settings</string>
    <!--    save last read-->

</resources>
