<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_corner"
    android:layout_marginStart="33dp">
    <TextView
        android:text="@string/profile_title_update"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:scaleType="center"
        android:contentDescription="@string/app_name"
        android:layout_margin="20dp"/>
    <EditText
        android:id="@+id/dialog_username"
        android:inputType="text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingBottom="10dp"
        android:hint="@string/username_hint"
        android:textSize="20sp"
        android:autofillHints="username"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <Button
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/gray"
            app:strokeColor="@color/trans"
            android:text="@string/dialog_cancel"/>

        <Button
            android:id="@+id/btn_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/purple_200"
            android:text="@string/dialog_update"/>
    </LinearLayout>
</LinearLayout>