<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".auth.SignupActivity">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/backbtn"
        android:src="@drawable/arrow_left_solid"
        android:background="@color/trans"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/curve_box_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="@dimen/login_padding_h"
        android:layout_marginVertical="@dimen/login_padding_v"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/curve_box_teal_bg"
            android:contentDescription="@string/logo_description"
            android:padding="20dp"
            android:src="@drawable/camera_solid"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_title" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="245dp"
            android:layout_height="46dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@string/login_title_font"
            android:gravity="center"
            android:text="@string/signup_title"
            android:textColor="@color/background"
            android:textSize="@dimen/login_title_fontSize"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:autofillHints="emailAddress"
            android:hint="@string/prompt_username"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/login_logo"
            tools:layout_editor_absoluteX="5dp" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:autofillHints="emailAddress"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/txt_username"
            tools:layout_editor_absoluteX="5dp" />

        <EditText
            android:id="@+id/txt_pw"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/txt_email"
            tools:layout_editor_absoluteX="15dp" />

        <EditText
            android:id="@+id/txt_pw_con"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:hint="@string/prompt_password_con"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/btn_submit"
            app:layout_constraintTop_toBottomOf="@id/txt_pw"
            tools:layout_editor_absoluteX="15dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/curve_box_teal_bg"
            android:text="@string/title_activity_login"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/txt_pw_con"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/signup_link"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="right"
            android:paddingEnd="7dp"
            android:text="@string/signup_login_link"
            android:textSize="15sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_submit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>