<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="project.heko.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="project.heko.ui.gallery.LnFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/lightnovel_detail" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="project.heko.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="project.heko.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile">
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="project.heko.ui.search.SearchFragment"
        android:label="Search"
        tools:layout="@layout/fragment_search" />
</navigation>