<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/login_padding_h"
    android:paddingVertical="@dimen/login_padding_v"
    tools:context=".auth.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/curve_box_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="84dp"
            android:background="@drawable/curve_box_teal_bg"
            android:contentDescription="@string/logo_description"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView

            android:id="@+id/login_title"
            android:layout_width="185dp"
            android:layout_height="46dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@string/login_title_font"
            android:gravity="center"
            android:text="@string/title_activity_login"
            android:textColor="@color/background"
            android:textSize="@dimen/login_title_fontSize"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_logo" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/prompt_email"
            app:layout_constraintTop_toBottomOf="@id/login_title"
            tools:layout_editor_absoluteX="5dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/txt_pw"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/prompt_password"
            app:layout_constraintTop_toBottomOf="@id/txt_email"
            tools:layout_editor_absoluteX="15dp"
            android:autofillHints="password"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/curve_box_teal_bg"
            android:text="@string/title_activity_login"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/txt_pw"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/signup_link"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            android:text="@string/login_signup_link"
            android:textSize="15sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_submit"
            android:paddingEnd="7dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>