<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.book.InfoLnFragment">
    <include
        android:id="@+id/loader"
        layout="@layout/loading_overlay"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp">
                <ImageView
                    android:id="@+id/ln_cover"
                    android:layout_width="180dp"
                    android:layout_height="220dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/ln_cover_dec"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/ln_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.516"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ln_cover" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/group_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginHorizontal="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.026"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ln_title"
                    tools:ignore="MissingConstraints" />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/div_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    app:layout_constraintTop_toBottomOf="@id/group_genre">
                    <TextView
                        android:id="@+id/author_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author_header"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@+id/txt_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        app:layout_constraintLeft_toRightOf="@id/author_header"
                        android:layout_marginStart="70dp"
                        app:layout_constraintTop_toTopOf="parent" />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@id/author_header">
                        <ImageView
                            android:id="@+id/follow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/follow_light_novel"
                            android:src="@drawable/ic_heart_outline"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="30dp"
                            app:tint="@color/red" />
                        <ImageView
                            android:id="@+id/ic_list"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_list"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/go_to_list_volume" />

                        <ImageView
                            android:id="@+id/ic_update"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/last_update"
                            android:src="@drawable/ic_baseline_update"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="30dp" />
                        <TextView
                            android:id="@+id/txt_follow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_follow"
                            android:textSize="14sp"
                            android:layout_alignParentStart="true"
                            android:layout_below="@id/follow" />

                        <TextView
                            android:id="@+id/txt_list_volume"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/ic_list"
                            android:layout_centerInParent="true"
                            android:text="@string/title_volume"
                            android:textSize="14sp" />
                        <TextView
                            android:id="@+id/txt_last_update"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/ic_update"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="5dp"
                            android:textSize="14sp"
                             />
                    </RelativeLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/div1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    app:dividerThickness="1dp"
                    app:layout_constraintTop_toBottomOf="@+id/div_author"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="0dp" />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ln_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/div1"
                    android:layout_marginTop="15dp"
                    android:layout_marginHorizontal="20dp">
                    <TextView
                        android:id="@+id/txt_content_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ln_des"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/txt_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/txt_content_header"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:paddingHorizontal="10dp"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>